Add next button

--- a/CarShowRoom/MainWindow.xaml
+++ b/CarShowRoom/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="317,251,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="110,180,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </Window>
