--- a/CarShowRoom/App.xaml
+++ b/CarShowRoom/App.xaml
@@ -4,6 +4,110 @@
              xmlns:local="clr-namespace:CarShowRoom"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <GradientStopCollection x:Key="MyGlassGradientStopsResource">
+            <GradientStop Offset="0.2" Color="WhiteSmoke" />
+            <GradientStop Offset="0.4" Color="Transparent" />
+            <GradientStop Offset="0.5" Color="WhiteSmoke" />
+            <GradientStop Offset="0.75" Color="Transparent" />
+            <GradientStop Offset="0.9" Color="WhiteSmoke" />
+            <GradientStop Offset="1" Color="Transparent" />
+        </GradientStopCollection>
+        <LinearGradientBrush x:Key="GrayBlueGardientBrush" StartPoint="0,0" EndPoint="1,1">
+            <GradientStop Offset="0" Color="#0842FF" />
+            <GradientStop Offset="0.5" Color="#CCE5FF" />
+            <GradientStop Offset="1" Color="#F4EA05" />
+
+        </LinearGradientBrush>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Background" Value="{StaticResource GrayBlueGardientBrush}" />
+            <Setter Property="Width" Value="80" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Template">
+                <Setter.Value>
+
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid Width="{TemplateBinding Width}"
+                              Height="{TemplateBinding Height}"
+                              ClipToBounds="True">
+
+                            <Rectangle x:Name="outerRectangle"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"
+                                       Fill="Transparent"
+                                       RadiusX="20"
+                                       RadiusY="20"
+                                       Stroke="{TemplateBinding Background}"
+                                       StrokeThickness="5" />
+
+                            <Rectangle x:Name="innerRectangle"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"
+                                       Fill="{TemplateBinding Background}"
+                                       RadiusX="20"
+                                       RadiusY="20"
+                                       Stroke="Transparent"
+                                       StrokeThickness="20" />
+
+                            <Rectangle x:Name="glassCube"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"
+                                       Fill="{StaticResource GrayBlueGardientBrush}"
+                                       Opacity="0"
+                                       RadiusX="10"
+                                       RadiusY="10"
+                                       RenderTransformOrigin="0.5,0.5"
+                                       StrokeThickness="2">
+                                <Rectangle.Stroke>
+                                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                        <LinearGradientBrush.GradientStops>
+                                            <GradientStop Offset="0.0" Color="#EBEC99" />
+                                            <GradientStop Offset="1.0" Color="Gray" />
+                                        </LinearGradientBrush.GradientStops>
+                                    </LinearGradientBrush>
+                                </Rectangle.Stroke>
+
+                                <Rectangle.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform />
+                                        <RotateTransform />
+                                    </TransformGroup>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.BitmapEffect>
+                                    <BevelBitmapEffect />
+                                </Rectangle.BitmapEffect>
+                            </Rectangle>
+
+                            <DockPanel Name="myContentPresenterDockPanel">
+                                <ContentPresenter x:Name="myContentPresenter"
+                                                  Margin="20"
+                                                  Content="{TemplateBinding Content}"
+                                                  TextBlock.Foreground="#C96904" />
+                            </DockPanel>
+                        </Grid>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+
+
+                                <Setter TargetName="outerRectangle" Property="Rectangle.Stroke" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+
+
+                                <Setter TargetName="glassCube" Property="Rectangle.Opacity" Value="1" />
+
+
+                                <Setter TargetName="myContentPresenter" Property="ContentPresenter.BitmapEffect">
+                                    <Setter.Value>
+                                        <BlurBitmapEffect Radius="1" />
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+
+                    </ControlTemplate>
+
+                </Setter.Value>
+
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
