--- a/CarShowRoom/MainWindow.xaml
+++ b/CarShowRoom/MainWindow.xaml
@@ -2,13 +2,61 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarShowRoom"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="MainWindow"
+        Width="525"
+        Height="350"
+        Loaded="Window_Loaded"
+        ResizeMode="NoResize"
+        WindowStyle="ToolWindow"
+        mc:Ignorable="d">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="317,251,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="110,180,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="button"
+                Width="80"
+                Height="53"
+                Margin="182,256,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Content="Button" />
+        <Button x:Name="Car_Model"
+                Width="167"
+                Height="53"
+                Margin="10,256,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Click="Car_Model_Click"
+                Content="Work with car models" />
+        <DataGrid x:Name="dataGrid"
+                  Width="497"
+                  Height="146"
+                  Margin="10,10,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  AlternatingRowBackground="LightBlue"
+                  AutoGeneratingColumn="dataGrid_AutoGeneratingColumn"
+                  Background="#FFD7F9F9"
+                  BorderBrush="#FFFF0021"
+                  BorderThickness="2"
+                  CanUserAddRows="False"
+                  CanUserReorderColumns="False"
+                  CanUserResizeColumns="False"
+                  CanUserSortColumns="False"
+                  EnableColumnVirtualization="false"
+                  EnableRowVirtualization="false"
+                  Foreground="DarkOrchid"
+                  HorizontalGridLinesBrush="Violet"
+                  HorizontalScrollBarVisibility="Visible"
+                  IsReadOnly="True"
+                  ItemsSource="{Binding Countries}"
+                  RowBackground="MistyRose"
+                  SelectionMode="Single"
+                  VerticalGridLinesBrush="Crimson"
+                  VerticalScrollBarVisibility="Visible">
+            <DataGrid.Effect>
+                <DropShadowEffect BlurRadius="100" Color="#FFECF036" />
+            </DataGrid.Effect>
+        </DataGrid>
 
     </Grid>
 </Window>
